# ShadowCrawler

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs-read-appdata.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: toolbar.tsx
src/components/viewer/: Card.tsx  PlayerModal.tsx  VideoContainer.tsx
src/screens/: onboarding.tsx  viewer.tsx
src/services/: dependencyChecker.ts  videoIndexer.ts  videoPreloader.ts  videoStore.ts
src/types/: video.ts
src/utils/: onboarding.ts
